# ChangeLog for app-office/openoffice-bin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.239 2011/03/17 11:56:52 suka Exp $

  17 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
  openoffice-bin-3.3.0.ebuild:
  Remove kde stuff, this is KDE3-only, which is not even in the tree anymore.
  Bug upstream about 
  packaging KDE4-support

  17 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
  openoffice-bin-3.3.0.ebuild:
  Properly install all sizes of app and mimetype icons

*openoffice-bin-3.3.0 (16 Mar 2011)

  16 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-bin-3.3.0.ebuild:
  Bump to OpenOffice.org 3.3.0

  16 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
  openoffice-bin-3.2.1.ebuild:
  Remove old style virtuals PROVIDE, bug #358895

  05 Feb 2011; Andreas Proschofsky <suka@gentoo.org> files/50-openoffice-bin,
  -openoffice-bin-3.2.0.ebuild, openoffice-bin-3.2.1.ebuild, files/wrapper.in:
  EAPI3 and prefix fixes, bug #315805, also clean up pax-stuff, bug #353587,
  remove outdated release

  15 Nov 2010; Thomas Kahle <tomka@gentoo.org> openoffice-bin-3.2.1.ebuild:
  x86 stable per bug #340917

  13 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  openoffice-bin-3.2.1.ebuild:
  Stable on amd64 wrt bug #340917

*openoffice-bin-3.2.1 (14 Jun 2010)

  14 Jun 2010; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-bin-3.2.1_rc1.ebuild, +openoffice-bin-3.2.1.ebuild:
  Bump to OpenOffice 3.2.1

*openoffice-bin-3.2.1_rc1 (23 May 2010)

  23 May 2010; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-bin-3.2.1_rc1.ebuild:
  First release candidate for openoffice-bin-3.2.1

  18 Apr 2010; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-bin-3.1.1.ebuild:
  Remove openoffice-bin 3.1.1 for security bug #305195

  08 Mar 2010; Richard Freeman <rich0@gentoo.org>
  openoffice-bin-3.2.0.ebuild:
  amd64 stable - 305195
