@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.239 2011/03/17 11:56:52 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.240 2011/03/17 13:04:03 suka Exp $
+
+  17 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
+  openoffice-bin-3.3.0.ebuild:
+  Bunch of cleanups, dependencies, restricts
 
   17 Mar 2011; Andreas Proschofsky <suka@gentoo.org>
   openoffice-bin-3.3.0.ebuild:
